fix: Alignment of card body when stacked cards are in a row with other cards.

--- a/src/stories/Organisms/Section/Section.css
+++ b/src/stories/Organisms/Section/Section.css
@@ -45,6 +45,10 @@
   width: 100%;
 }
 
+.section .section__main.multiple:not(.stack) .card__inner {
+  display: block;
+}
+
 .section .section__header,
 .section .section__button {
   --align-items: center;
